--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
-
-    
   },
   "repository": {
     "type": "git",
@@ -21,5 +19,8 @@
   "homepage": "https://github.com/sanchessky/Desenvolvimento_Desktop#readme",
   "devDependencies": {
     "electron": "^34.2.0"
+  },
+  "dependencies": {
+    "mongoose": "^8.12.2"
   }
 }
